--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,19 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-nav id="nav" [root]="rootPage" #nav swipeBackEnabled="false"></ion-nav>
+
+<ion-menu [content]="nav">
+
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>We will counting stars</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button> doing the right thing </button>
+      <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        {{p.title}}
+      </button>
+    </ion-list>
+  </ion-content>
+
+</ion-menu>
