--- a/src/pages/minesweeper/mine/mine.scss
+++ b/src/pages/minesweeper/mine/mine.scss
@@ -1,5 +1,6 @@
 //Material design colors: Blue grey
 $blue-200: rgb(144, 202, 249);
+$blue-200-disabled: rgb(154, 212, 259);
 $blue-200-light: #A1DBFA;
 $blue-200-dark: #80B9E8;
 $blue-300: #64B5F6;
@@ -9,7 +10,8 @@ mine {
     text-align: center;
     width: 10vw;
     height: 10vw;
-    display: inline-block;
+    display: block;
+    float: left;
 
 
     background: $blue-200;
@@ -20,11 +22,12 @@ mine {
     border-top: 2px solid $blue-200-light;
     border-left: 2px solid $blue-200-light;
     &:hover {
-      background: red;
+      background: $blue-300;
+      border: 2px solid $blue-300;
     }
     &.disabled {
-      background: #dddddf;
-      border: 2px solid #dddddf;
+      background-color: $blue-200-disabled;
+      border-color: $blue-200-disabled;
     }
   }
   &.touched {
