Changed font style!

--- a/src/pages/minesweeper/mine/mine.scss
+++ b/src/pages/minesweeper/mine/mine.scss
@@ -18,16 +18,20 @@ mine {
 
     border-top: 2px solid $blue-200-light;
     border-left: 2px solid $blue-200-light;
+
+    font-weight: bold;
+    font-size: 2.6rem;
+    font-family: consolas;
+
     &.disabled {
       background-color: $blue-200-disabled;
       border-color: $blue-200-disabled;
     }
-    .img-container {
-      display: table-cell;
-      vertical-align: middle;
-      img {
-        width: 40%;
-      }
+    &.flag {
+      background-image: url('assets/images/flag.svg');
+    }
+    &.color-red {
+      color: red;
     }
   }
   &.touched {
