--- a/src/pages/minesweeper/mine/mine.scss
+++ b/src/pages/minesweeper/mine/mine.scss
@@ -34,7 +34,7 @@ mine {
     border-left: 2px solid $blue-200-light;
     font-weight: bold;
     font-size: 2.6rem;
-    font-family: consolas;
+    font-family: consolas,monaco,monospace;
     @include bgCover();
 
     .text-wrapper {
