--- a/src/pages/minesweeper/mine/mine.scss
+++ b/src/pages/minesweeper/mine/mine.scss
@@ -34,7 +34,8 @@ mine {
     border-left: 2px solid $blue-200-light;
     font-weight: bold;
     font-size: 2.6rem;
-    font-family: consolas,menlo,monaco,monospace;
+    //font-family: consolas,menlo,monaco,monospace;
+    font-family: consolas;
 
     @include bgCover();
 
