--- a/src/pages/minesweeper/mine/mine.scss
+++ b/src/pages/minesweeper/mine/mine.scss
@@ -35,7 +35,7 @@ mine {
     font-weight: bold;
     font-size: 2.6rem;
     //font-family: consolas,menlo,monaco,monospace;
-    font-family: consolas;
+    font-family: sans-serif-smallcaps;
 
     @include bgCover();
 
