--- a/src/pages/minesweeper/mine/mine.scss
+++ b/src/pages/minesweeper/mine/mine.scss
@@ -34,8 +34,7 @@ mine {
     border-left: 2px solid $blue-200-light;
     font-weight: bold;
     font-size: 2.6rem;
-    //font-family: consolas,menlo,monaco,monospace;
-    font-family: sans-serif-smallcaps;
+    font-family: consolas,menlo,monaco,sans-serif-smallcaps,monospace;
 
     @include bgCover();
 
