--- a/src/pages/minesweeper/mine/mine.scss
+++ b/src/pages/minesweeper/mine/mine.scss
@@ -38,13 +38,40 @@ mine {
 
     @include bgCover();
 
-    .text-wrapper {
+    .content-wrapper {
       width: 100%;
       height: 100%;
       display: table;
-      .text {
+      position: relative;
+      .text-content {
         display: table-cell;
         vertical-align: middle;
+      }
+      .image-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        height: 55%;
+        width: 55%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    .svg {
+      polygon {
+        fill: transparent;
+        transition: fill 2s ease;
+      }
+      path {
+        fill: transparent;
+        transition: fill 2s ease;
+      }
+      &.show {
+        polygon {
+          fill: #CC4B4C;
+        }
+        path {
+          fill:#424A60;
+        }
       }
     }
 
@@ -52,9 +79,6 @@ mine {
       background-color: $blue-200-pressed;
       border-color: $blue-200-dark;
       border-width: 1px;
-    }
-    &.flag {
-      background-image: url('../assets/images/flag.svg');
     }
     &.bomb {
       background-color: $blue-200-pressed;
